fehlt noch die gallerie

--- a/index.html
+++ b/index.html
@@ -68,8 +68,24 @@
         <div class="swiper-slide bg-outside" data-name="Projects">
           <div class="swiper-container swiper-container-h bg-inside">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><h1>this.</h1></div>
-              <div class="swiper-slide">AAAAAAAAAA</div>
+              <div class="swiper-slide">
+                <h1>this.</h1>
+              </div>
+              <div class="swiper-slide">
+                <div class="projects-bg"></div>
+                <div class="digital">
+                  <img
+                    src="./images/pexels-photo-669996.jpg"
+                    alt=""
+                    class="digital"
+                  />
+                  <h3>digital</h3>
+                </div>
+                <div class="physical">
+                  <img src="./images/IMG_7486.JPG" alt="" class="physical" />
+                  <h3>physical</h3>
+                </div>
+              </div>
               <div class="swiper-slide">Slide 3</div>
             </div>
             <div class="swiper-button-next"></div>
