design / responsive improved

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="icon"
+      type="image/png"
+      href="./images/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
@@ -35,7 +41,6 @@
               alt="logo"
               class="logo"
             />
-            <div class="frame"></div>
           </div>
         </div>
 
@@ -70,14 +75,25 @@
               <div class="swiper-slide bg-color">
                 <div class="bg-inside">
                   <div class="project-intro">
-                    <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Maxime unde accusantium, sed doloremque, culpa alias
-                      maiores praesentium vel dignissimos doloribus beatae fugit
-                      quas minima tempore accusamus, nulla id ea. Vero.
-                    </p>
-                    <div class="project-intro-pic"></div>
+                    <div class="project-intro-info">
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Maxime unde accusantium, sed doloremque, culpa alias
+                        maiores praesentium vel dignissimos doloribus beatae
+                        fugit quas minima tempore accusamus, nulla id ea. Vero.
+                      </p>
+                      <p>links gehts zum digitalen</p>
+                      <p>rechts gehts zum handfesten</p>
+                    </div>
+                    <div class="project-intro-pic">
+                      <img src="../images/project-intro.JPG" alt="intro" />
+                    </div>
                   </div>
+                </div>
+              </div>
+              <div class="swiper-slide bg-color">
+                <div class="bg-inside moebel-1">
+                  <h1>this.</h1>
                 </div>
               </div>
               <div class="swiper-slide bg-color">
