--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
                       <p>links gehts zum digitalen</p>
                       <p>rechts gehts zum handfesten</p>
                     </div>
-                    <div class="project-intro-pic">
-                      <img src="../images/project-intro.JPG" alt="intro" />
-                    </div>
+                    <div class="project-intro-pic"></div>
                   </div>
                 </div>
               </div>
