--- a/index.html
+++ b/index.html
@@ -48,15 +48,16 @@
         <div class="swiper-slide bg-outside bg-color" data-name="About">
           <div class="bg-inside">
             <div class="about-wrapper">
-              <img src="./images/IMG_7958 (3).JPG" alt="thats marcus" />
+              <img src="./images/thisIsMe.png" alt="thats marcus" />
               <div class="about-info">
                 <h2>Hello there, I'm</h2>
                 <h1>Marcus Will</h1>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi
-                  dolorum libero consequatur quas at, quae provident aspernatur
-                  ullam suscipit! Obcaecati harum minima necessitatibus odit
-                  aliquam, exercitationem architecto eos delectus voluptate!
+                  I was always interested how stuff works and how to build it.
+                  Trained as an industrial mechanic, woodworker, event
+                  technician and programmer, I'm able to build almost everything
+                  from scratch. So if you want to build something awesome, feel
+                  free to contact me.
                 </p>
               </div>
             </div>
@@ -69,6 +70,22 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide bg-color">
                 <div class="bg-inside">
+                  <div class="website-info">
+                    <h1>this.</h1>
+                    <p>
+                      I build this site to practice on my web development and
+                      -design skills
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide bg-color">
+                <div class="bg-inside">
+                  <h1>this.</h1>
+                </div>
+              </div>
+              <div class="swiper-slide bg-color">
+                <div class="bg-inside">
                   <h1>this.</h1>
                 </div>
               </div>
@@ -77,13 +94,18 @@
                   <div class="project-intro">
                     <div class="project-intro-info">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Maxime unde accusantium, sed doloremque, culpa alias
-                        maiores praesentium vel dignissimos doloribus beatae
-                        fugit quas minima tempore accusamus, nulla id ea. Vero.
+                        This Portfolio shows some of my projects I did in my
+                        free time. Everything here was my baby from the idea
+                        being born, over conception, planning, designing and
+                        finally crafting it.
                       </p>
-                      <p>links gehts zum digitalen</p>
-                      <p>rechts gehts zum handfesten</p>
+                      <p>
+                        On the left hand you will find things that includes
+                        coding
+                      </p>
+                      <p>
+                        On the right projects which are made the oldschool way
+                      </p>
                     </div>
                     <div class="project-intro-pic"></div>
                   </div>
