--- a/index.html
+++ b/index.html
@@ -79,16 +79,53 @@
                   </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
                 <div class="bg-inside">
-                  <h1>this.</h1>
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/leuchte1.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <img src="./images/projects/leuchte2.jpg" alt="" />
+                    </div>
+                    <div class="third-grid">
+                      <div class="info">
+                        <h5>Ambilight</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Dolorum cum totam porro illum doloribus officiis
+                          impedit aspernatur voluptates dicta ducimus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
                 <div class="bg-inside">
-                  <h1>this.</h1>
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/helm.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <div class="info">
+                        <h5>Daft Cyberpunk</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Dolorum cum totam porro illum doloribus officiis
+                          impedit aspernatur voluptates dicta ducimus.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="third-grid">
+                      <img src="./images/projects/helm_gif.gif" alt="" />
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
                 <div class="bg-inside">
                   <div class="project-intro">
@@ -111,19 +148,73 @@
                   </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
-                <div class="bg-inside moebel-1">
-                  <h1>this.</h1>
+                <div class="bg-inside">
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/soundsystem1.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <img src="./images/projects/soundsystem2.jpg" alt="" />
+                    </div>
+                    <div class="third-grid">
+                      <div class="info">
+                        <h5>Sound Wall-E</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Dolorum cum totam porro illum doloribus officiis
+                          impedit aspernatur voluptates dicta ducimus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
                 <div class="bg-inside moebel-2">
-                  <h1>this.</h1>
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/sitzecke1.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <div class="info">
+                        <h5>Chill Dome</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Dolorum cum totam porro illum doloribus officiis
+                          impedit aspernatur voluptates dicta ducimus.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="third-grid">
+                      <img src="./images/projects/sitzecke2.jpg" alt="" />
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="swiper-slide bg-color">
                 <div class="bg-inside moebel-3">
-                  <h1>this.</h1>
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/lowboard1.png" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <img src="./images/projects/lowboard2.jpg" alt="" />
+                    </div>
+                    <div class="third-grid">
+                      <div class="info">
+                        <h5>Lowboard</h5>
+                        <p>
+                          Lorem ipsum dolor sit amet consectetur adipisicing
+                          elit. Dolorum cum totam porro illum doloribus officiis
+                          impedit aspernatur voluptates dicta ducimus.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -145,7 +236,7 @@
                 <textarea
                   name="message"
                   id="input-message"
-                  placeholder="your message"
+                  placeholder="enter your message here"
                   resize="none"
                   rows="12"
                 ></textarea>
