texte und ein paar bilder verbessert

--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
                       <img src="./images/projects/leuchte1.jpg" alt="" />
                     </div>
                     <div class="second-grid">
-                      <img src="./images/projects/leuchte2.jpg" alt="" />
+                      <img src="./images/projects/leuchte2.gif" alt="" />
                     </div>
                     <div class="third-grid">
                       <div class="info">
                         <h5>Ambilight</h5>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolorum cum totam porro illum doloribus officiis
-                          impedit aspernatur voluptates dicta ducimus.
+                          A desk lamp in a modern design with 4 different
+                          ambient modes. Bouncing balls, fire, color changes and
+                          sound react.
                         </p>
                       </div>
                     </div>
@@ -113,9 +113,10 @@
                       <div class="info">
                         <h5>Daft Cyberpunk</h5>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolorum cum totam porro illum doloribus officiis
-                          impedit aspernatur voluptates dicta ducimus.
+                          Based on the design of Guy-Manuel's legendary helmet,
+                          this version can track the wearer's eyes and voice and
+                          project them onto the helmet. Has different LED modes
+                          and is coated with real rust
                         </p>
                       </div>
                     </div>
@@ -131,17 +132,17 @@
                   <div class="project-intro">
                     <div class="project-intro-info">
                       <p>
-                        This Portfolio shows some of my projects I did in my
-                        free time. Everything here was my baby from the idea
-                        being born, over conception, planning, designing and
-                        finally crafting it.
+                        Here I show some of my projects that I built in my spare
+                        time. Everything is completely planned, designed and
+                        built only by me.
                       </p>
                       <p>
-                        On the left hand you will find things that includes
-                        coding
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i> go
+                        left for stuff where coding is involved
                       </p>
                       <p>
-                        On the right projects which are made the oldschool way
+                        go right for the good-old analog stuff
+                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
                       </p>
                     </div>
                     <div class="project-intro-pic"></div>
@@ -162,9 +163,12 @@
                       <div class="info">
                         <h5>Sound Wall-E</h5>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolorum cum totam porro illum doloribus officiis
-                          impedit aspernatur voluptates dicta ducimus.
+                          Inspired by the stackable sound systems of the UK
+                          Dubmovement, this transportable system with several
+                          boxes was created. It can be transformed into severel
+                          versions and a bicycle trailer in a few simple steps.
+                          You can also hang a DJ controller and laptop on the
+                          handlebars when it's assembled.
                         </p>
                       </div>
                     </div>
@@ -182,9 +186,10 @@
                       <div class="info">
                         <h5>Chill Dome</h5>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolorum cum totam porro illum doloribus officiis
-                          impedit aspernatur voluptates dicta ducimus.
+                          A relaxation area of ​​more than 3x3m, lined with
+                          plants. A bookcase is set in one of the armpits, and
+                          everything has clever arranged indirect light. Ideal
+                          for social gatherings with many people.
                         </p>
                       </div>
                     </div>
@@ -208,9 +213,9 @@
                       <div class="info">
                         <h5>Lowboard</h5>
                         <p>
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolorum cum totam porro illum doloribus officiis
-                          impedit aspernatur voluptates dicta ducimus.
+                          A mobile lowboard that can be aligned in various
+                          directions as required. Has an elegant floating design
+                          and cleverly integrated cable management
                         </p>
                       </div>
                     </div>
