--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
                 <h2>Hello there, I'm</h2>
                 <h1>Marcus Will</h1>
                 <p>
-                  I was always interested how stuff works and how to build it.
-                  Trained as an industrial mechanic, woodworker, event
-                  technician and programmer, I'm able to build almost everything
-                  from scratch. So if you want to build something awesome, feel
-                  free to contact me.
+                  I've always been fascinated by how things work and how to
+                  build or repair them. Thanks to my many years of experience as
+                  an industrial mechanic, carpenter, event technician and
+                  programmer, I am now able to turn almost every crazy idea into
+                  reality. So if you want something unusual to be built, feel
+                  free to contact me
                 </p>
               </div>
             </div>
@@ -163,12 +164,12 @@
                       <div class="info">
                         <h5>Sound Wall-E</h5>
                         <p>
-                          Inspired by the stackable sound systems of the UK
-                          Dubmovement, this transportable system with several
-                          boxes was created. It can be transformed into severel
-                          versions and a bicycle trailer in a few simple steps.
-                          You can also hang a DJ controller and laptop on the
-                          handlebars when it's assembled.
+                          Inspired by the UK soundsystems, this transportable
+                          system with several boxes was created. It can be
+                          transformed into severel versions and a bicycle
+                          trailer in a few simple steps. You can also hang a DJ
+                          controller and laptop on the handlebars when it's
+                          assembled.
                         </p>
                       </div>
                     </div>
