--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   an industrial mechanic, carpenter, event technician and
                   programmer, I am now able to turn almost every crazy idea into
                   reality. So if you want something unusual to be built, feel
-                  free to contact me
+                  free to contact me.
                 </p>
               </div>
             </div>
@@ -74,7 +74,7 @@
                   <div class="website-info">
                     <h1>this.</h1>
                     <p>
-                      I build this site to practice on my web development and
+                      I built this site to practice my web development and
                       -design skills
                     </p>
                   </div>
@@ -95,7 +95,7 @@
                         <h5>Ambilight</h5>
                         <p>
                           A desk lamp in a modern design with 4 different
-                          ambient modes. Bouncing balls, fire, color changes and
+                          ambient modes: Bouncing balls, fire, color changes and
                           sound react.
                         </p>
                       </div>
@@ -135,7 +135,7 @@
                       <p>
                         Here I show some of my projects that I built in my spare
                         time. Everything is completely planned, designed and
-                        built only by me.
+                        built solely by me.
                       </p>
                       <p>
                         <i class="fa fa-arrow-left" aria-hidden="true"></i> go
@@ -162,11 +162,11 @@
                     </div>
                     <div class="third-grid">
                       <div class="info">
-                        <h5>Sound Wall-E</h5>
+                        <h5>sound Wall-E</h5>
                         <p>
-                          Inspired by the UK soundsystems, this transportable
-                          system with several boxes was created. It can be
-                          transformed into severel versions and a bicycle
+                          Inspired by the UK soundsystems, I created this
+                          transportable system with several speakers. It can be
+                          transformed into several versions and a bicycle
                           trailer in a few simple steps. You can also hang a DJ
                           controller and laptop on the handlebars when it's
                           assembled.
@@ -185,12 +185,12 @@
                     </div>
                     <div class="second-grid">
                       <div class="info">
-                        <h5>Chill Dome</h5>
+                        <h5>chill dome</h5>
                         <p>
                           A relaxation area of ​​more than 3x3m, lined with
-                          plants. A bookcase is set in one of the armpits, and
-                          everything has clever arranged indirect light. Ideal
-                          for social gatherings with many people.
+                          plants. A bookcase is set in one of the inner arms,
+                          and everything has clever arranged indirect light.
+                          Ideal for social gatherings with many people.
                         </p>
                       </div>
                     </div>
@@ -205,18 +205,67 @@
                 <div class="bg-inside moebel-3">
                   <div class="grid-wrapper">
                     <div class="main-grid">
-                      <img src="./images/projects/lowboard1.png" alt="" />
+                      <img src="./images/projects/lowboard1.jpg" alt="" />
                     </div>
                     <div class="second-grid">
                       <img src="./images/projects/lowboard2.jpg" alt="" />
                     </div>
                     <div class="third-grid">
                       <div class="info">
-                        <h5>Lowboard</h5>
+                        <h5>lowboard</h5>
                         <p>
                           A mobile lowboard that can be aligned in various
-                          directions as required. Has an elegant floating design
-                          and cleverly integrated cable management
+                          directions as required. Has an elegant floating
+                          design, a cleverly integrated cable management and the
+                          tv is height adjustable.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="swiper-slide bg-color">
+                <div class="bg-inside moebel-3">
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/schrank1.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <img src="./images/projects/schrank2.jpg" alt="" />
+                    </div>
+                    <div class="third-grid">
+                      <div class="info">
+                        <h5>sliding door cabinet</h5>
+                        <p>
+                          This cabinet aims to appear modern, simple but
+                          timeless at once. It offers a lot of storage space and
+                          blends in perfectly with the curved lines of the room.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="swiper-slide bg-color">
+                <div class="bg-inside moebel-3">
+                  <div class="grid-wrapper">
+                    <div class="main-grid">
+                      <img src="./images/projects/bett1.jpg" alt="" />
+                    </div>
+                    <div class="second-grid">
+                      <img src="./images/projects/bett2.jpg" alt="" />
+                    </div>
+                    <div class="third-grid">
+                      <div class="info">
+                        <h5>bedroom</h5>
+                        <p>
+                          The bed is built around the column, framed by a
+                          gray-stained wooden decoration in which green lilies
+                          provide good air quality and a touch-sensitive copper
+                          lamp. There is storage space for bedding in the
+                          headboard.
                         </p>
                       </div>
                     </div>
