--- a/index.html
+++ b/index.html
@@ -55,15 +55,45 @@
       <div class="swiper-slide" data-name="Projects">
         <div class="swiper-container swiper-container-h bg-outside">
           <div class="swiper-wrapper">
+
+            <div class="swiper-slide bg-color">
+              <div class="bg-inside">
+                <div class="split-screen">
+                  <div>
+                    <h2 style="width: 50%;">
+                      <a href="https://www.ottobock.com/de-de/startseite">ottobock.de</a>
+                    </h2>
+                    <div style="width: 50%;">
+                      <p>
+                        I was part of a small team that redesigned the whole ottobock corporate site. It's working with an headless CMS and was released in 2021 in 42 countrys at once.
+                      </p>
+                    </div>
+                  </div>
+                  <div>
+                    <h2 style="width: 50%;">
+                      <a href="https://www.procam-berlin.de/de/augustad/">Procam Augusta Automation</a>
+                    </h2>
+                    <div style="width: 50%;">
+                      <p>
+                        I supported the development of this automation software and helped move the Codebase from Angular to Solid JS.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="swiper-slide bg-color">
               <div class="bg-inside">
                 <div class="website-info">
                   <h1>this.</h1>
-                  <p>
-                    I built this site to practice my web development and
-                    -design skills, but don't get fooled by the poor coding, I did this long ago
-                    after I finished my bootcamp
-                  </p>
+                  <div style="width: 50%; margin: auto;">
+                    <p>
+                      I built this site to practice my web development and
+                      -design skills, but don't get fooled by the poor coding, I did this long ago
+                      after I finished my bootcamp and didn't had the time to renew everything here.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
